Extract JFlexLexer, JFlexStateStacker, JFlexXrefSimple
- Refactor JFlexXref to have same, single-value stacked
  state data as JFlexTokenizer with language-specific,
  additional state downstream.
- Add JFlexXref.disjointSpan() to manage non-stacked output
  spans (independent of and not clashing with Scopes).
- Extract PhpXrefSpanner for that language's particular
  "popStrings" method.
- Update C(xx)XrefTests data for new escaping of &quot; and
  &apos;.

--- a/test/org/opensolaris/opengrok/analysis/c/c_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/c/c_xrefres.html
@@ -11,7 +11,7 @@ function get_sym_list(){return [["Function","xf",[["abstime_to_reltime",70],["hr
 <a class="l" name="3" href="#3">3</a><span class='fold-space'>&nbsp;</span> *
 <a class="l" name="4" href="#4">4</a><span class='fold-space'>&nbsp;</span> * The contents of this file are subject to the terms of the
 <a class="l" name="5" href="#5">5</a><span class='fold-space'>&nbsp;</span> * Common Development and Distribution License, Version 1.0 only
-<a class="l" name="6" href="#6">6</a><span class='fold-space'>&nbsp;</span> * (the "License").  You may not use this file except in compliance
+<a class="l" name="6" href="#6">6</a><span class='fold-space'>&nbsp;</span> * (the &quot;License&quot;).  You may not use this file except in compliance
 <a class="l" name="7" href="#7">7</a><span class='fold-space'>&nbsp;</span> * with the License.
 <a class="l" name="8" href="#8">8</a><span class='fold-space'>&nbsp;</span> *
 <a class="l" name="9" href="#9">9</a><span class='fold-space'>&nbsp;</span> * You can obtain a copy of the license at <a href="/source/s?path=usr/">usr</a>/<a href="/source/s?path=usr/src/">src</a>/<a href="/source/s?path=usr/src/OPENSOLARIS.LICENSE">OPENSOLARIS.LICENSE</a>
@@ -22,7 +22,7 @@ function get_sym_list(){return [["Function","xf",[["abstime_to_reltime",70],["hr
 <a class="l" name="14" href="#14">14</a><span class='fold-space'>&nbsp;</span> * When distributing Covered Code, include this CDDL HEADER in each
 <a class="l" name="15" href="#15">15</a><span class='fold-space'>&nbsp;</span> * file and include the License file at <a href="/source/s?path=usr/">usr</a>/<a href="/source/s?path=usr/src/">src</a>/<a href="/source/s?path=usr/src/OPENSOLARIS.LICENSE">OPENSOLARIS.LICENSE</a>.
 <a class="l" name="16" href="#16">16</a><span class='fold-space'>&nbsp;</span> * If applicable, add the following below this CDDL HEADER, with the
-<a class="l" name="17" href="#17">17</a><span class='fold-space'>&nbsp;</span> * fields enclosed by brackets "[]" replaced with your own identifying
+<a class="l" name="17" href="#17">17</a><span class='fold-space'>&nbsp;</span> * fields enclosed by brackets &quot;[]&quot; replaced with your own identifying
 <a class="l" name="18" href="#18">18</a><span class='fold-space'>&nbsp;</span> * information: Portions Copyright [yyyy] [name of copyright owner]
 <a class="l" name="19" href="#19">19</a><span class='fold-space'>&nbsp;</span> *
 <a class="hl" name="20" href="#20">20</a><span class='fold-space'>&nbsp;</span> * CDDL HEADER END
@@ -32,7 +32,7 @@ function get_sym_list(){return [["Function","xf",[["abstime_to_reltime",70],["hr
 <a class="l" name="24" href="#24">24</a><span class='fold-space'>&nbsp;</span> * Use is subject to license terms.
 <a class="l" name="25" href="#25">25</a><span class='fold-space'>&nbsp;</span> */</span>
 <a class="l" name="26" href="#26">26</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="27" href="#27">27</a><span class='fold-space'>&nbsp;</span>#<b>pragma</b> <b>ident</b>	<span class="s">"%Z%%M%	%I%	%E% SMI"</span>
+<a class="l" name="27" href="#27">27</a><span class='fold-space'>&nbsp;</span>#<b>pragma</b> <b>ident</b>	<span class="s">&quot;%Z%%M%	%I%	%E% SMI&quot;</span>
 <a class="l" name="28" href="#28">28</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="29" href="#29">29</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &lt;<a href="/source/s?path=sys/">sys</a>/<a href="/source/s?path=sys/types.h">types.h</a>&gt;
 <a class="hl" name="30" href="#30">30</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &lt;<a href="/source/s?path=time.h">time.h</a>&gt;
