Add (non-passing) test showing insufficient matching of URI

--- a/test/org/opensolaris/opengrok/analysis/ada/ada_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/ada/ada_xrefres.html
@@ -47,5 +47,9 @@
 <a class="hl" name="40" href="#40">40</a>	<b>Put_Line</b>();
 <a class="l" name="41" href="#41">41</a>	<b>Put_Line</b>(<span class="s">&quot;Archimedes said &quot;&quot;Εύρηκα&quot;&quot;&quot;</span>);
 <a class="l" name="42" href="#42">42</a><b>end</b> <a href="/source/s?defs=Hello" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Hello</a>;
-<a class="l" name="43" href="#43">43</a></body>
+<a class="l" name="43" href="#43">43</a>
+<a class="l" name="44" href="#44">44</a><span class="c">-- Test a URL that is not matched fully by a rule using just {URIChar} and</span>
+<a class="l" name="45" href="#45">45</a><span class="c">-- {FnameChar}:</span>
+<a class="l" name="46" href="#46">46</a><span class="c">-- <a href="https://msdn.microsoft.com/en-us/library/windows/desktop/ms633591(v=vs.85).aspx">https://msdn.microsoft.com/en-us/library/windows/desktop/ms633591(v=vs.85).aspx</a></span>
+<a class="l" name="47" href="#47">47</a></body>
 </html>
