Accept any path for #include statement for issue #471
Also:
- Use Common.lexh in C[xx]SymbolTokenizer.lex.
- Make C[xx]Xref case-sensitive, revising the only
  affected pattern, {File}.

--- a/test/org/opensolaris/opengrok/analysis/c/c_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/c/c_xrefres.html
@@ -36,7 +36,7 @@ function get_sym_list(){return [["Function","xf",[["abstime_to_reltime",70],["hr
 <a class="l" name="28" href="#28">28</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="29" href="#29">29</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &lt;<a href="/source/s?path=sys/">sys</a>/<a href="/source/s?path=sys/types.h">types.h</a>&gt;
 <a class="hl" name="30" href="#30">30</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &lt;<a href="/source/s?path=time.h">time.h</a>&gt;
-<a class="l" name="31" href="#31">31</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &lt;<a href="/source/s?path=errno.h">errno.h</a>&gt;
+<a class="l" name="31" href="#31">31</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &quot;<a href="/source/s?path=errno.ext1">errno.ext1</a>&quot;
 <a class="l" name="32" href="#32">32</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="33" href="#33">33</a><span class='fold-space'>&nbsp;</span><span class="c">/*
 <a class="l" name="34" href="#34">34</a><span class='fold-space'>&nbsp;</span> * This function is blatently stolen from the kernel.
