--- a/test/org/opensolaris/opengrok/analysis/c/cc_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/c/cc_xrefres.html
@@ -37,7 +37,7 @@ function get_sym_list(){return [["Function","xf",[["Ancestor",37],["addInstance"
 <a class="l" name="29" href="#29">29</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &lt;<a href="/source/s?path=stdlib.h">stdlib.h</a>&gt;
 <a class="hl" name="30" href="#30">30</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &lt;<a href="/source/s?path=string.h">string.h</a>&gt;
 <a class="l" name="31" href="#31">31</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="32" href="#32">32</a><span class='fold-space'>&nbsp;</span>#<b>include</b> <span class="s">"<a href="/source/s?path=Ancestor.h">Ancestor.h</a>"</span>
+<a class="l" name="32" href="#32">32</a><span class='fold-space'>&nbsp;</span>#<b>include</b> &quot;<a href="/source/s?path=Ancestor.ext1">Ancestor.ext1</a>&quot;
 <a class="l" name="33" href="#33">33</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="34" href="#34">34</a><span class='fold-space'>&nbsp;</span><span class="c">/* ========================================================================= */</span>
 <a class="l" name="35" href="#35">35</a><span class='fold-space'>&nbsp;</span><span class="c">/* Ancestor object definitions. */</span>
