--- a/test/org/opensolaris/opengrok/analysis/csharp/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/csharp/sample_xref.html
@@ -82,7 +82,7 @@ function get_sym_list(){return [["Class","xc",[["Serialization",52],["WrappedDes
 <a class="l" name="74" href="#74">74</a><span class='fold-space'>&nbsp;</span>            <span class="c">///</span>
 <a class="l" name="75" href="#75">75</a><span class='fold-space'>&nbsp;</span>            <span class="c">/// &lt;/summary&gt;</span>
 <a class="l" name="76" href="#76">76</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="77" href="#77">77</a><span class='fold-space'>&nbsp;</span>            <a class="xer" name="XML"/><a href="/source/s?refs=XML" class="xer intelliWindow-symbol" data-definition-place="def">XML</a> = <span class="n">1</span>,
+<a class="l" name="77" href="#77">77</a><span class='fold-space'>&nbsp;</span>            <a class="xer" name="XML"/><a href="/source/s?refs=XML" class="xer intelliWindow-symbol" data-definition-place="def">XML</a> = <span class="n">0xFF</span>,
 <a class="l" name="78" href="#78">78</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="79" href="#79">79</a><span class='fold-space'>&nbsp;</span>            <span class="c">/// &lt;summary&gt;</span>
 <a class="hl" name="80" href="#80">80</a><span class='fold-space'>&nbsp;</span>            <span class="c">///</span>
