Fix by subclassing JavaXrefSimple and sharing via Java.lexh

--- a/test/org/opensolaris/opengrok/analysis/java/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/java/sample_xref.html
@@ -10,7 +10,7 @@ function get_sym_list(){return [["Class","xc",[["InnerClass",47],["Sample",25]]]
 <a class="l" name="2" href="#2">2</a><span class='fold-space'>&nbsp;</span> * CDDL HEADER START
 <a class="l" name="3" href="#3">3</a><span class='fold-space'>&nbsp;</span> *
 <a class="l" name="4" href="#4">4</a><span class='fold-space'>&nbsp;</span> * The contents of this file are subject to the terms of the
-<a class="l" name="5" href="#5">5</a><span class='fold-space'>&nbsp;</span> * Common Development and Distribution License (the "License").
+<a class="l" name="5" href="#5">5</a><span class='fold-space'>&nbsp;</span> * Common Development and Distribution License (the &quot;License&quot;).
 <a class="l" name="6" href="#6">6</a><span class='fold-space'>&nbsp;</span> * You may not use this file except in compliance with the License.
 <a class="l" name="7" href="#7">7</a><span class='fold-space'>&nbsp;</span> *
 <a class="l" name="8" href="#8">8</a><span class='fold-space'>&nbsp;</span> * See <a href="/source/s?path=LICENSE.txt">LICENSE.txt</a> included in this distribution for the specific
@@ -19,7 +19,7 @@ function get_sym_list(){return [["Class","xc",[["InnerClass",47],["Sample",25]]]
 <a class="l" name="11" href="#11">11</a><span class='fold-space'>&nbsp;</span> * When distributing Covered Code, include this CDDL HEADER in each
 <a class="l" name="12" href="#12">12</a><span class='fold-space'>&nbsp;</span> * file and include the License file at <a href="/source/s?path=LICENSE.txt">LICENSE.txt</a>.
 <a class="l" name="13" href="#13">13</a><span class='fold-space'>&nbsp;</span> * If applicable, add the following below this CDDL HEADER, with the
-<a class="l" name="14" href="#14">14</a><span class='fold-space'>&nbsp;</span> * fields enclosed by brackets "[]" replaced with your own identifying
+<a class="l" name="14" href="#14">14</a><span class='fold-space'>&nbsp;</span> * fields enclosed by brackets &quot;[]&quot; replaced with your own identifying
 <a class="l" name="15" href="#15">15</a><span class='fold-space'>&nbsp;</span> * information: Portions Copyright [yyyy] [name of copyright owner]
 <a class="l" name="16" href="#16">16</a><span class='fold-space'>&nbsp;</span> *
 <a class="l" name="17" href="#17">17</a><span class='fold-space'>&nbsp;</span> * CDDL HEADER END
@@ -32,7 +32,7 @@ function get_sym_list(){return [["Class","xc",[["InnerClass",47],["Sample",25]]]
 <a class="l" name="24" href="#24">24</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="25" href="#25">25</a><span class='fold-space'>&nbsp;</span><b>public</b> <b>class</b> <a class="xc" name="Sample"/><a href="/source/s?refs=Sample" class="xc intelliWindow-symbol" data-definition-place="def">Sample</a> &#123;
 <a class="l" name="26" href="#26">26</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="27" href="#27">27</a><span class='fold-space'>&nbsp;</span>    <b>static</b> <b>private</b> <a href="/source/s?defs=String" class="intelliWindow-symbol" data-definition-place="undefined-in-file">String</a> <a class="xfld" name="MY_MEMBER"/><a href="/source/s?refs=MY_MEMBER" class="xfld intelliWindow-symbol" data-definition-place="def">MY_MEMBER</a> = <span class="s">"value"</span>&#59;
+<a class="l" name="27" href="#27">27</a><span class='fold-space'>&nbsp;</span>    <b>static</b> <b>private</b> <a href="/source/s?defs=String" class="intelliWindow-symbol" data-definition-place="undefined-in-file">String</a> <a class="xfld" name="MY_MEMBER"/><a href="/source/s?refs=MY_MEMBER" class="xfld intelliWindow-symbol" data-definition-place="def">MY_MEMBER</a> = <span class="s">&quot;value&quot;</span>&#59;
 <a class="l" name="28" href="#28">28</a><span class='fold-space'>&nbsp;</span>
 <span id='scope_id_332feb92' class='scope-head'><span class='scope-signature'>Sample()</span><a class="l" name="29" href="#29">29</a><a style='cursor:pointer;' onclick='fold(this.parentNode.id)' id='scope_id_332feb92_fold_icon'><span class='fold-icon'>&nbsp;</span></a>    <b>public</b> <a class="xmt" name="Sample"/><a href="/source/s?refs=Sample" class="xmt intelliWindow-symbol" data-definition-place="def">Sample</a>() &#123;</span>
 <span id='scope_id_332feb92_fold' class='scope-body'><a class="hl" name="30" href="#30">30</a><span class='fold-space'>&nbsp;</span>
@@ -60,9 +60,9 @@ function get_sym_list(){return [["Class","xc",[["InnerClass",47],["Sample",25]]]
 <a class="l" name="52" href="#52">52</a><span class='fold-space'>&nbsp;</span>                multi-line comment }{}
 <a class="l" name="53" href="#53">53</a><span class='fold-space'>&nbsp;</span>            */</span>
 <a class="l" name="54" href="#54">54</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="55" href="#55">55</a><span class='fold-space'>&nbsp;</span>            <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=print" class="intelliWindow-symbol" data-definition-place="undefined-in-file">print</a>(<span class="s">"I'm so useless"</span>)&#59;
+<a class="l" name="55" href="#55">55</a><span class='fold-space'>&nbsp;</span>            <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=print" class="intelliWindow-symbol" data-definition-place="undefined-in-file">print</a>(<span class="s">&quot;I&apos;m so useless&quot;</span>)&#59;
 <a class="l" name="56" href="#56">56</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="57" href="#57">57</a><span class='fold-space'>&nbsp;</span>            <b>return</b> <span class="s">"Why do robots need to drink?"</span>&#59;
+<a class="l" name="57" href="#57">57</a><span class='fold-space'>&nbsp;</span>            <b>return</b> <span class="s">&quot;Why do robots need to drink?&quot;</span>&#59;
 <a class="l" name="58" href="#58">58</a><span class='fold-space'>&nbsp;</span>        &#125;
 </span><a class="l" name="59" href="#59">59</a><span class='fold-space'>&nbsp;</span>
 <a class="hl" name="60" href="#60">60</a><span class='fold-space'>&nbsp;</span>    &#125;
@@ -73,12 +73,12 @@ function get_sym_list(){return [["Class","xc",[["InnerClass",47],["Sample",25]]]
 <a class="l" name="65" href="#65">65</a><span class='fold-space'>&nbsp;</span>            <span class="c">// Try block to handle code that may cause exception</span>
 <a class="l" name="66" href="#66">66</a><span class='fold-space'>&nbsp;</span>            <a class="d intelliWindow-symbol" href="#num1" data-definition-place="defined-in-file">num1</a> = <span class="n">0</span>&#59;
 <a class="l" name="67" href="#67">67</a><span class='fold-space'>&nbsp;</span>            <a class="d intelliWindow-symbol" href="#num2" data-definition-place="defined-in-file">num2</a> = <span class="n">62</span> * <span class="n">0xFFFF</span> / <a class="d intelliWindow-symbol" href="#num1" data-definition-place="defined-in-file">num1</a>&#59;
-<a class="l" name="68" href="#68">68</a><span class='fold-space'>&nbsp;</span>            <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=println" class="intelliWindow-symbol" data-definition-place="undefined-in-file">println</a>(<span class="s">"Try block message"</span>)&#59;
+<a class="l" name="68" href="#68">68</a><span class='fold-space'>&nbsp;</span>            <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=println" class="intelliWindow-symbol" data-definition-place="undefined-in-file">println</a>(<span class="s">&quot;Try block message&quot;</span>)&#59;
 <a class="l" name="69" href="#69">69</a><span class='fold-space'>&nbsp;</span>        &#125; <b>catch</b> (<a href="/source/s?defs=ArithmeticException" class="intelliWindow-symbol" data-definition-place="undefined-in-file">ArithmeticException</a> e) &#123;
 <a class="hl" name="70" href="#70">70</a><span class='fold-space'>&nbsp;</span>            <span class="c">// This block is to catch divide-by-zero error</span>
-<a class="l" name="71" href="#71">71</a><span class='fold-space'>&nbsp;</span>            <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=println" class="intelliWindow-symbol" data-definition-place="undefined-in-file">println</a>(<span class="s">"Error: Don't divide a number by zero"</span>)&#59;
+<a class="l" name="71" href="#71">71</a><span class='fold-space'>&nbsp;</span>            <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=println" class="intelliWindow-symbol" data-definition-place="undefined-in-file">println</a>(<span class="s">&quot;Error: Don&apos;t divide a number by zero&quot;</span>)&#59;
 <a class="l" name="72" href="#72">72</a><span class='fold-space'>&nbsp;</span>        &#125;
-<a class="l" name="73" href="#73">73</a><span class='fold-space'>&nbsp;</span>        <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=println" class="intelliWindow-symbol" data-definition-place="undefined-in-file">println</a>(<span class="s">"I'm out of try-catch block in Java."</span>)&#59;
+<a class="l" name="73" href="#73">73</a><span class='fold-space'>&nbsp;</span>        <a href="/source/s?defs=System" class="intelliWindow-symbol" data-definition-place="undefined-in-file">System</a>.<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>.<a href="/source/s?defs=println" class="intelliWindow-symbol" data-definition-place="undefined-in-file">println</a>(<span class="s">&quot;I&apos;m out of try-catch block in Java.&quot;</span>)&#59;
 <a class="l" name="74" href="#74">74</a><span class='fold-space'>&nbsp;</span>    &#125;
 </span><a class="l" name="75" href="#75">75</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="76" href="#76">76</a><span class='fold-space'>&nbsp;</span>&#125;
