Fix FortranSymbolTokenizer number bug

--- a/test/org/opensolaris/opengrok/analysis/fortran/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/fortran/sample_xref.html
@@ -205,7 +205,7 @@ function get_sym_list(){return [["Subroutine","xsr",[["DGESV",173]]]];} /* ]]> *
 <a class="l" name="197" href="#197">197</a><span class="c">*</span>
 <a class="l" name="198" href="#198">198</a><span class="c">*     Test the input parameters.</span>
 <a class="l" name="199" href="#199">199</a><span class="c">*</span>
-<a class="hl" name="200" href="#200">200</a>      <a href="/source/s?defs=INFO" class="intelliWindow-symbol" data-definition-place="undefined-in-file">INFO</a> = <span class="n">0</span>
+<a class="hl" name="200" href="#200">200</a>      <a href="/source/s?defs=INFO" class="intelliWindow-symbol" data-definition-place="undefined-in-file">INFO</a> = <span class="n">0</span> + <span class="n">0xFFFF</span> - <span class="n">0XFF</span> - <span class="n">0xFF00</span>
 <a class="l" name="201" href="#201">201</a>      <b>IF</b>( N.<b>LT</b>.<span class="n">0</span> ) <b>THEN</b>
 <a class="l" name="202" href="#202">202</a>         <a href="/source/s?defs=INFO" class="intelliWindow-symbol" data-definition-place="undefined-in-file">INFO</a> = -<span class="n">1</span>
 <a class="l" name="203" href="#203">203</a>      <b>ELSE</b> <b>IF</b>( <a href="/source/s?defs=NRHS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">NRHS</a>.<b>LT</b>.<span class="n">0</span> ) <b>THEN</b>
