Fix to make VB lexers fully case-insensitive

--- a/test/org/opensolaris/opengrok/analysis/vb/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/vb/sample_xref.html
@@ -28,10 +28,10 @@ function get_sym_list(){return [];} /* ]]> */</script><a class="l" name="1" href
 <a class="hl" name="20" href="#20">20</a><span class="c">' OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE</span>
 <a class="l" name="21" href="#21">21</a><span class="c">' SOFTWARE.</span>
 <a class="l" name="22" href="#22">22</a>
-<a class="l" name="23" href="#23">23</a><a href="/source/s?defs=VERSION" class="intelliWindow-symbol" data-definition-place="undefined-in-file">VERSION</a> <span class="n">1.0</span> <a href="/source/s?defs=CLASS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">CLASS</a>
+<a class="l" name="23" href="#23">23</a><a href="/source/s?defs=VERSION" class="intelliWindow-symbol" data-definition-place="undefined-in-file">VERSION</a> <span class="n">1.0</span> <b>CLASS</b>
 <a class="l" name="24" href="#24">24</a><a href="/source/s?defs=BEGIN" class="intelliWindow-symbol" data-definition-place="undefined-in-file">BEGIN</a>
 <a class="l" name="25" href="#25">25</a>  <a href="/source/s?defs=MultiUse" class="intelliWindow-symbol" data-definition-place="undefined-in-file">MultiUse</a> = -<span class="n">1</span>  <span class="c">'True</span>
-<a class="l" name="26" href="#26">26</a><a href="/source/s?defs=END" class="intelliWindow-symbol" data-definition-place="undefined-in-file">END</a>
+<a class="l" name="26" href="#26">26</a><b>END</b>
 <a class="l" name="27" href="#27">27</a><a href="/source/s?defs=Attribute" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Attribute</a> <a href="/source/s?defs=VB_Name" class="intelliWindow-symbol" data-definition-place="undefined-in-file">VB_Name</a> = <span class="s">"WebResponse"</span>
 <a class="l" name="28" href="#28">28</a><a href="/source/s?defs=Attribute" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Attribute</a> <a href="/source/s?defs=VB_GlobalNameSpace" class="intelliWindow-symbol" data-definition-place="undefined-in-file">VB_GlobalNameSpace</a> = <b>False</b>
 <a class="l" name="29" href="#29">29</a><a href="/source/s?defs=Attribute" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Attribute</a> <a href="/source/s?defs=VB_Creatable" class="intelliWindow-symbol" data-definition-place="undefined-in-file">VB_Creatable</a> = <b>False</b>
