--- a/test/org/opensolaris/opengrok/analysis/sh/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/sh/sample_xref.html
@@ -34,10 +34,10 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="26" href="#26">26</a><span class="c"># xref: build and maintain source cross-reference databases.</span>
 <a class="l" name="27" href="#27">27</a><span class="c">#</span>
 <a class="l" name="28" href="#28">28</a>
-<a class="l" name="29" href="#29">29</a><a href="/source/s?defs=ONBLDDIR" class="intelliWindow-symbol" data-definition-place="undefined-in-file">ONBLDDIR</a>=<span>$(<a href="/source/s?defs=dirname" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dirname</a> </span><span>$(<b>whence</b> $<span class="n">0</span>)</span><span>)</span>
+<a class="l" name="29" href="#29">29</a><a href="/source/s?defs=ONBLDDIR" class="intelliWindow-symbol" data-definition-place="undefined-in-file">ONBLDDIR</a>=$(<a href="/source/s?defs=dirname" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dirname</a> $(<b>whence</b> $<span class="n">0</span>))
 <a class="hl" name="30" href="#30">30</a>
-<a class="l" name="31" href="#31">31</a><a href="/source/s?defs=PROG" class="intelliWindow-symbol" data-definition-place="undefined-in-file">PROG</a>=<span>`<a href="/source/s?defs=basename" class="intelliWindow-symbol" data-definition-place="undefined-in-file">basename</a> $<span class="n">0</span>`</span>
-<a class="l" name="32" href="#32">32</a><a href="/source/s?defs=XREFMK" class="intelliWindow-symbol" data-definition-place="undefined-in-file">XREFMK</a>=<span>`<a href="/source/s?defs=dirname" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dirname</a> $<span class="n">0</span>`</span>/<a href="/source/s?path=xref.mk">xref.mk</a>
+<a class="l" name="31" href="#31">31</a><a href="/source/s?defs=PROG" class="intelliWindow-symbol" data-definition-place="undefined-in-file">PROG</a>=`<a href="/source/s?defs=basename" class="intelliWindow-symbol" data-definition-place="undefined-in-file">basename</a> $<span class="n">0</span>`
+<a class="l" name="32" href="#32">32</a><a href="/source/s?defs=XREFMK" class="intelliWindow-symbol" data-definition-place="undefined-in-file">XREFMK</a>=`<a href="/source/s?defs=dirname" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dirname</a> $<span class="n">0</span>`/<a href="/source/s?path=xref.mk">xref.mk</a>
 <a class="l" name="33" href="#33">33</a><a href="/source/s?defs=XRMAKEFILE" class="intelliWindow-symbol" data-definition-place="undefined-in-file">XRMAKEFILE</a>=<a href="/source/s?defs=Makefile" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Makefile</a> <b>export</b> <a href="/source/s?defs=XRMAKEFILE" class="intelliWindow-symbol" data-definition-place="undefined-in-file">XRMAKEFILE</a>
 <a class="l" name="34" href="#34">34</a><a href="/source/s?defs=MAKE" class="intelliWindow-symbol" data-definition-place="undefined-in-file">MAKE</a>=<span class="s">"dmake -m serial"</span>
 <a class="l" name="35" href="#35">35</a>
@@ -56,43 +56,43 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="48" href="#48">48</a><span class="c">#</span>
 <a class="l" name="49" href="#49">49</a><span class="c"># Print the provided failure message and exit with an error.</span>
 <a class="hl" name="50" href="#50">50</a><span class="c">#</span>
-<a class="l" name="51" href="#51">51</a><a class="xf" name="fail"/><a href="/source/s?refs=fail" class="xf intelliWindow-symbol" data-definition-place="def">fail</a><span>()</span>
-<a class="l" name="52" href="#52">52</a><span>{
+<a class="l" name="51" href="#51">51</a><a class="xf" name="fail"/><a href="/source/s?refs=fail" class="xf intelliWindow-symbol" data-definition-place="def">fail</a>()
+<a class="l" name="52" href="#52">52</a>{
 <a class="l" name="53" href="#53">53</a>        <b>echo</b> <a href="/source/s?defs=$PROG" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$PROG</a>: $@ &gt; /<a href="/source/s?path=/dev/">dev</a>/<a href="/source/s?path=/dev/stderr">stderr</a>
 <a class="l" name="54" href="#54">54</a>        <b>exit</b> <span class="n">1</span>
-<a class="l" name="55" href="#55">55</a>}</span>
+<a class="l" name="55" href="#55">55</a>}
 <a class="l" name="56" href="#56">56</a>
 <a class="l" name="57" href="#57">57</a><span class="c">#</span>
 <a class="l" name="58" href="#58">58</a><span class="c"># Print the provided warning message.</span>
 <a class="l" name="59" href="#59">59</a><span class="c">#</span>
-<a class="hl" name="60" href="#60">60</a><a class="xf" name="warn"/><a href="/source/s?refs=warn" class="xf intelliWindow-symbol" data-definition-place="def">warn</a><span>()</span>
-<a class="l" name="61" href="#61">61</a><span>{
+<a class="hl" name="60" href="#60">60</a><a class="xf" name="warn"/><a href="/source/s?refs=warn" class="xf intelliWindow-symbol" data-definition-place="def">warn</a>()
+<a class="l" name="61" href="#61">61</a>{
 <a class="l" name="62" href="#62">62</a>        <b>echo</b> <a href="/source/s?defs=$PROG" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$PROG</a>: <a href="/source/s?defs=warning" class="intelliWindow-symbol" data-definition-place="undefined-in-file">warning</a>: $@ &gt; /<a href="/source/s?path=/dev/">dev</a>/<a href="/source/s?path=/dev/stderr">stderr</a>
-<a class="l" name="63" href="#63">63</a>}</span>
+<a class="l" name="63" href="#63">63</a>}
 <a class="l" name="64" href="#64">64</a>
 <a class="l" name="65" href="#65">65</a><span class="c">#</span>
 <a class="l" name="66" href="#66">66</a><span class="c"># Print the provided informational message.</span>
 <a class="l" name="67" href="#67">67</a><span class="c">#</span>
-<a class="l" name="68" href="#68">68</a><a class="xf" name="info"/><a href="/source/s?refs=info" class="xf intelliWindow-symbol" data-definition-place="def">info</a><span>()</span>
-<a class="l" name="69" href="#69">69</a><span>{
+<a class="l" name="68" href="#68">68</a><a class="xf" name="info"/><a href="/source/s?refs=info" class="xf intelliWindow-symbol" data-definition-place="def">info</a>()
+<a class="l" name="69" href="#69">69</a>{
 <a class="hl" name="70" href="#70">70</a>        <b>echo</b> <a href="/source/s?defs=$PROG" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$PROG</a>: $@
-<a class="l" name="71" href="#71">71</a>}</span>
+<a class="l" name="71" href="#71">71</a>}
 <a class="l" name="72" href="#72">72</a>
 <a class="l" name="73" href="#73">73</a><span class="c">#</span>
 <a class="l" name="74" href="#74">74</a><span class="c"># Print the provided informational message, and the current value of $SECONDS</span>
 <a class="l" name="75" href="#75">75</a><span class="c"># in a user-friendly format.</span>
 <a class="l" name="76" href="#76">76</a><span class="c">#</span>
-<a class="l" name="77" href="#77">77</a><a class="xf" name="timeinfo"/><a href="/source/s?refs=timeinfo" class="xf intelliWindow-symbol" data-definition-place="def">timeinfo</a><span>()</span>
-<a class="l" name="78" href="#78">78</a><span>{
+<a class="l" name="77" href="#77">77</a><a class="xf" name="timeinfo"/><a href="/source/s?refs=timeinfo" class="xf intelliWindow-symbol" data-definition-place="def">timeinfo</a>()
+<a class="l" name="78" href="#78">78</a>{
 <a class="l" name="79" href="#79">79</a>	<b>typeset</b> -<a href="/source/s?defs=Z2" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Z2</a> <a href="/source/s?defs=sec" class="intelliWindow-symbol" data-definition-place="undefined-in-file">sec</a>
 <a class="hl" name="80" href="#80">80</a>	<b>typeset</b> -i <a href="/source/s?defs=min" class="intelliWindow-symbol" data-definition-place="undefined-in-file">min</a> <a href="/source/s?defs=seconds" class="intelliWindow-symbol" data-definition-place="undefined-in-file">seconds</a>
 <a class="l" name="81" href="#81">81</a>
-<a class="l" name="82" href="#82">82</a>	</span><span>(</span><span>(<a href="/source/s?defs=seconds" class="intelliWindow-symbol" data-definition-place="undefined-in-file">seconds</a> = <a href="/source/s?defs=SECONDS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">SECONDS</a>)</span><span>)</span><span>
-<a class="l" name="83" href="#83">83</a>	</span><span>(</span><span>(<a href="/source/s?defs=min" class="intelliWindow-symbol" data-definition-place="undefined-in-file">min</a> = <a href="/source/s?defs=seconds" class="intelliWindow-symbol" data-definition-place="undefined-in-file">seconds</a> / <span class="n">60</span>)</span><span>)</span><span>
-<a class="l" name="84" href="#84">84</a>	</span><span>(</span><span>(<a href="/source/s?defs=sec" class="intelliWindow-symbol" data-definition-place="undefined-in-file">sec</a> = <a href="/source/s?defs=seconds" class="intelliWindow-symbol" data-definition-place="undefined-in-file">seconds</a> % <span class="n">60</span>)</span><span>)</span><span>
+<a class="l" name="82" href="#82">82</a>	((<a href="/source/s?defs=seconds" class="intelliWindow-symbol" data-definition-place="undefined-in-file">seconds</a> = <a href="/source/s?defs=SECONDS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">SECONDS</a>))
+<a class="l" name="83" href="#83">83</a>	((<a href="/source/s?defs=min" class="intelliWindow-symbol" data-definition-place="undefined-in-file">min</a> = <a href="/source/s?defs=seconds" class="intelliWindow-symbol" data-definition-place="undefined-in-file">seconds</a> / <span class="n">60</span>))
+<a class="l" name="84" href="#84">84</a>	((<a href="/source/s?defs=sec" class="intelliWindow-symbol" data-definition-place="undefined-in-file">sec</a> = <a href="/source/s?defs=seconds" class="intelliWindow-symbol" data-definition-place="undefined-in-file">seconds</a> % <span class="n">60</span>))
 <a class="l" name="85" href="#85">85</a>
-<a class="l" name="86" href="#86">86</a>	<a class="d intelliWindow-symbol" href="#info" data-definition-place="defined-in-file">info</a> </span><span class="s">"$1 in ${min}m${sec}s"</span><span>
-<a class="l" name="87" href="#87">87</a>}</span>
+<a class="l" name="86" href="#86">86</a>	<a class="d intelliWindow-symbol" href="#info" data-definition-place="defined-in-file">info</a> <span class="s">"$1 in ${min}m${sec}s"</span>
+<a class="l" name="87" href="#87">87</a>}
 <a class="l" name="88" href="#88">88</a>
 <a class="l" name="89" href="#89">89</a><a href="/source/s?defs=which_scm" class="intelliWindow-symbol" data-definition-place="undefined-in-file">which_scm</a> | <b>read</b> <a href="/source/s?defs=SCM_MODE" class="intelliWindow-symbol" data-definition-place="undefined-in-file">SCM_MODE</a> <a href="/source/s?defs=CODEMGR_WS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">CODEMGR_WS</a> || <b>exit</b> <span class="n">1</span>
 <a class="hl" name="90" href="#90">90</a>
@@ -103,7 +103,7 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="95" href="#95">95</a>
 <a class="l" name="96" href="#96">96</a><b>export</b> <a href="/source/s?defs=CODEMGR_WS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">CODEMGR_WS</a>
 <a class="l" name="97" href="#97">97</a><a href="/source/s?defs=SRC" class="intelliWindow-symbol" data-definition-place="undefined-in-file">SRC</a>=<a href="/source/s?defs=$CODEMGR_WS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$CODEMGR_WS</a>/<a href="/source/s?path=/usr/">usr</a>/<a href="/source/s?path=/usr/src">src</a> <b>export</b> <a href="/source/s?defs=SRC" class="intelliWindow-symbol" data-definition-place="undefined-in-file">SRC</a>
-<a class="l" name="98" href="#98">98</a><a href="/source/s?defs=MACH" class="intelliWindow-symbol" data-definition-place="undefined-in-file">MACH</a>=<span>`<a href="/source/s?defs=uname" class="intelliWindow-symbol" data-definition-place="undefined-in-file">uname</a> -p`</span> <b>export</b> <a href="/source/s?defs=MACH" class="intelliWindow-symbol" data-definition-place="undefined-in-file">MACH</a>
+<a class="l" name="98" href="#98">98</a><a href="/source/s?defs=MACH" class="intelliWindow-symbol" data-definition-place="undefined-in-file">MACH</a>=`<a href="/source/s?defs=uname" class="intelliWindow-symbol" data-definition-place="undefined-in-file">uname</a> -p` <b>export</b> <a href="/source/s?defs=MACH" class="intelliWindow-symbol" data-definition-place="undefined-in-file">MACH</a>
 <a class="l" name="99" href="#99">99</a>
 <a class="hl" name="100" href="#100">100</a>[ -f <a href="/source/s?defs=$XREFMK" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$XREFMK</a> ] || <a class="d intelliWindow-symbol" href="#fail" data-definition-place="defined-in-file">fail</a> <span class="s">"cannot locate <a href="/source/s?path=xref.mk">xref.mk</a>"</span>
 <a class="l" name="101" href="#101">101</a>
@@ -145,7 +145,7 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="137" href="#137">137</a>	<b>esac</b>
 <a class="l" name="138" href="#138">138</a><b>done</b>
 <a class="l" name="139" href="#139">139</a>
-<a class="hl" name="140" href="#140">140</a><b>shift</b> <span>$(</span><span>(<a href="/source/s?defs=OPTIND" class="intelliWindow-symbol" data-definition-place="undefined-in-file">OPTIND</a> - <span class="n">1</span>)</span><span>)</span>
+<a class="hl" name="140" href="#140">140</a><b>shift</b> $((<a href="/source/s?defs=OPTIND" class="intelliWindow-symbol" data-definition-place="undefined-in-file">OPTIND</a> - <span class="n">1</span>))
 <a class="l" name="141" href="#141">141</a>
 <a class="l" name="142" href="#142">142</a><span class="c">#</span>
 <a class="l" name="143" href="#143">143</a><span class="c"># Get the list of directories before we reset $@.</span>
@@ -158,7 +158,7 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="hl" name="150" href="#150">150</a><span class="c"># even in the presence of lofs(7FS).</span>
 <a class="l" name="151" href="#151">151</a><span class="c">#</span>
 <a class="l" name="152" href="#152">152</a><b>cd</b> <a href="/source/s?defs=$CODEMGR_WS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$CODEMGR_WS</a>
-<a class="l" name="153" href="#153">153</a><a href="/source/s?defs=CODEMGR_WS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">CODEMGR_WS</a>=<span>`/<a href="/source/s?path=/bin/">bin</a>/<a href="/source/s?path=/bin/pwd">pwd</a>`</span>
+<a class="l" name="153" href="#153">153</a><a href="/source/s?defs=CODEMGR_WS" class="intelliWindow-symbol" data-definition-place="undefined-in-file">CODEMGR_WS</a>=`/<a href="/source/s?path=/bin/">bin</a>/<a href="/source/s?path=/bin/pwd">pwd</a>`
 <a class="l" name="154" href="#154">154</a><b>cd</b> - &gt; /<a href="/source/s?path=/dev/">dev</a>/<a href="/source/s?path=/dev/null">null</a>
 <a class="l" name="155" href="#155">155</a>
 <a class="l" name="156" href="#156">156</a><span class="c">#</span>
@@ -213,7 +213,7 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="205" href="#205">205</a>	<span class="c"># of lofs(7FS).</span>
 <a class="l" name="206" href="#206">206</a>	<span class="c">#</span>
 <a class="l" name="207" href="#207">207</a>	<b>cd</b> <a href="/source/s?defs=$dir" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$dir</a> || <a class="d intelliWindow-symbol" href="#fail" data-definition-place="defined-in-file">fail</a> <span class="s">"cannot change to directory <a href="/source/s?refs=$dir">$dir</a>"</span>
-<a class="l" name="208" href="#208">208</a>	<b>pwd</b>=<span>`/<a href="/source/s?path=/bin/">bin</a>/<a href="/source/s?path=/bin/pwd">pwd</a>`</span>
+<a class="l" name="208" href="#208">208</a>	<b>pwd</b>=`/<a href="/source/s?path=/bin/">bin</a>/<a href="/source/s?path=/bin/pwd">pwd</a>`
 <a class="l" name="209" href="#209">209</a>	<a href="/source/s?defs=reldir" class="intelliWindow-symbol" data-definition-place="undefined-in-file">reldir</a>=${<b>pwd</b><span class="c">##${CODEMGR_WS}/}</span>
 <a class="hl" name="210" href="#210">210</a>	<b>if</b> [ <span class="s">"<a href="/source/s?refs=$reldir">$reldir</a>"</span> = <span class="s">"<a href="/source/s?refs=$pwd">$pwd</a>"</span> ]; <b>then</b>
 <a class="l" name="211" href="#211">211</a>		<a class="d intelliWindow-symbol" href="#warn" data-definition-place="defined-in-file">warn</a> <span class="s">"directory \"<a href="/source/s?refs=$pwd">$pwd</a>\" is not beneath \$CODEMGR_WS; skipping"</span>
@@ -239,7 +239,7 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="231" href="#231">231</a>		<b>if</b> [ $? -<a href="/source/s?defs=ne" class="intelliWindow-symbol" data-definition-place="undefined-in-file">ne</a> <span class="n">0</span> ]; <b>then</b>
 <a class="l" name="232" href="#232">232</a>			<a class="d intelliWindow-symbol" href="#warn" data-definition-place="defined-in-file">warn</a> <span class="s">"<a href="/source/s?refs=$reldir">$reldir</a>: unable to find flg-related source files"</span>
 <a class="l" name="233" href="#233">233</a>		<b>else</b>
-<a class="l" name="234" href="#234">234</a>			<a href="/source/s?defs=nfiles" class="intelliWindow-symbol" data-definition-place="undefined-in-file">nfiles</a>=<span>`<a href="/source/s?defs=wc" class="intelliWindow-symbol" data-definition-place="undefined-in-file">wc</a> -l &lt; <a href="/source/s?path=xref.flg">xref.flg</a>`</span>
+<a class="l" name="234" href="#234">234</a>			<a href="/source/s?defs=nfiles" class="intelliWindow-symbol" data-definition-place="undefined-in-file">nfiles</a>=`<a href="/source/s?defs=wc" class="intelliWindow-symbol" data-definition-place="undefined-in-file">wc</a> -l &lt; <a href="/source/s?path=xref.flg">xref.flg</a>`
 <a class="l" name="235" href="#235">235</a>			<b>if</b> [ <span class="s">"<a href="/source/s?refs=$nfiles">$nfiles</a>"</span> -<a href="/source/s?defs=eq" class="intelliWindow-symbol" data-definition-place="undefined-in-file">eq</a> <span class="n">1</span> ]; <b>then</b>
 <a class="l" name="236" href="#236">236</a>				<a href="/source/s?defs=msg" class="intelliWindow-symbol" data-definition-place="undefined-in-file">msg</a>=<span class="s">"found 1 flg-related source file"</span>
 <a class="l" name="237" href="#237">237</a>			<b>else</b>
