--- a/test/org/opensolaris/opengrok/analysis/lua/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/lua/sample_xref.html
@@ -367,5 +367,9 @@ function get_sym_list(){return [["Function","xf",[["[MIME_TYPES.form_url_encoded
 <a class="l" name="359" href="#359">359</a>
 <a class="hl" name="360" href="#360">360</a>
 <a class="l" name="361" href="#361">361</a><b>return</b> <a href="/source/s?defs=_M" class="intelliWindow-symbol" data-definition-place="undefined-in-file">_M</a>
-<a class="l" name="362" href="#362">362</a></body>
+<a class="l" name="362" href="#362">362</a><b>return</b> <span class="s">&apos;<a href="http://example.com?a=">http://example.com?a=</a>&apos;</span>
+<a class="l" name="363" href="#363">363</a><b>return</b> <span class="s">[=[<a href="http://example.com?a=">http://example.com?a=</a>]=]</span>
+<a class="l" name="364" href="#364">364</a><b>return</b> <span class="s">&quot;<a href="http://example.com?a=">http://example.com?a=</a>&quot;</span>
+<a class="l" name="365" href="#365">365</a><b>return</b> <span class="s">&apos;<a href="http://example.com?a=">http://example.com?a=</a>\&apos;b\&apos;&apos;</span>
+<a class="l" name="366" href="#366">366</a></body>
 </html>
