Fix to fine-tune URI link for C/C++ QSTRING,COMMENT

--- a/test/org/opensolaris/opengrok/analysis/c/c_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/c/c_xrefres.html
@@ -110,5 +110,7 @@ function get_sym_list(){return [["Function","xf",[["abstime_to_reltime",70],["hr
 <a class="l" name="102" href="#102">102</a><span class='fold-space'>&nbsp;</span>	<b>if</b> ((<a href="/source/s?defs=ulong_t" class="intelliWindow-symbol" data-definition-place="undefined-in-file">ulong_t</a>)<a class="d intelliWindow-symbol" href="#abstime" data-definition-place="defined-in-file">abstime</a>-&gt;<a href="/source/s?defs=tv_nsec" class="intelliWindow-symbol" data-definition-place="undefined-in-file">tv_nsec</a> &gt;= <a href="/source/s?defs=NANOSEC" class="intelliWindow-symbol" data-definition-place="undefined-in-file">NANOSEC</a>)
 <a class="l" name="103" href="#103">103</a><span class='fold-space'>&nbsp;</span>		<a class="d intelliWindow-symbol" href="#reltime" data-definition-place="defined-in-file">reltime</a>-&gt;<a href="/source/s?defs=tv_nsec" class="intelliWindow-symbol" data-definition-place="undefined-in-file">tv_nsec</a> = <a class="d intelliWindow-symbol" href="#abstime" data-definition-place="defined-in-file">abstime</a>-&gt;<a href="/source/s?defs=tv_nsec" class="intelliWindow-symbol" data-definition-place="undefined-in-file">tv_nsec</a>&#59;
 <a class="l" name="104" href="#104">104</a><span class='fold-space'>&nbsp;</span>&#125;
-</span><a class="l" name="105" href="#105">105</a><span class='fold-space'>&nbsp;</span></body>
+</span><a class="l" name="105" href="#105">105</a><span class='fold-space'>&nbsp;</span>
+<a class="l" name="106" href="#106">106</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>*/</span>
+<a class="l" name="107" href="#107">107</a><span class='fold-space'>&nbsp;</span></body>
 </html>
