--- a/test/org/opensolaris/opengrok/analysis/c/cc_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/c/cc_xrefres.html
@@ -269,5 +269,7 @@ function get_sym_list(){return [["Function","xf",[["Ancestor",37],["addInstance"
 <a class="l" name="261" href="#261">261</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="262" href="#262">262</a><span class='fold-space'>&nbsp;</span>	<b>return</b> (<a href="/source/s?defs=found" class="intelliWindow-symbol" data-definition-place="undefined-in-file">found</a>)&#59;
 <a class="l" name="263" href="#263">263</a><span class='fold-space'>&nbsp;</span>&#125;
-</span><a class="l" name="264" href="#264">264</a><span class='fold-space'>&nbsp;</span></body>
+</span><a class="l" name="264" href="#264">264</a><span class='fold-space'>&nbsp;</span>
+<a class="l" name="265" href="#265">265</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>*/</span>
+<a class="l" name="266" href="#266">266</a><span class='fold-space'>&nbsp;</span></body>
 </html>
