--- a/test/org/opensolaris/opengrok/analysis/python/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/python/sample_xref.html
@@ -156,5 +156,7 @@ function get_sym_list(){return [["Variable","xv",[["char",121],["char_dict",93],
 <a class="l" name="148" href="#148">148</a>    f=<a href="/source/s?defs=open" class="intelliWindow-symbol" data-definition-place="undefined-in-file">open</a>(<a class="d intelliWindow-symbol" href="#save_path" data-definition-place="defined-in-file">save_path</a>[:-<span class="n">4</span>] + <span class="s">&apos;.txt&apos;</span>, <span class="s">&apos;w&apos;</span>)
 <a class="l" name="149" href="#149">149</a>    f.<a href="/source/s?defs=writelines" class="intelliWindow-symbol" data-definition-place="undefined-in-file">writelines</a>(<a class="d intelliWindow-symbol" href="#text" data-definition-place="defined-in-file">text</a>)
 <a class="hl" name="150" href="#150">150</a>    f.<a href="/source/s?defs=close" class="intelliWindow-symbol" data-definition-place="undefined-in-file">close</a>()
-<a class="l" name="151" href="#151">151</a></body>
+<a class="l" name="151" href="#151">151</a><b>print</b>(<span class="s">&apos;<a href="http://example.com?a=">http://example.com?a=</a>&apos;</span>)
+<a class="l" name="152" href="#152">152</a><b>print</b>(<span class="s">&apos;&apos;&apos;<a href="http://example.com?a='b'&amp;">http://example.com?a='b'&amp;</a>&apos;&apos;&apos;</span>)
+<a class="l" name="153" href="#153">153</a></body>
 </html>
