Fix to fine-tune URI link for Fortran QSTRING
Also:
- Fix to recognize proper Fortran escaping of
  quotation-marks and apostrophe.

--- a/test/org/opensolaris/opengrok/analysis/fortran/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/fortran/sample_xref.html
@@ -235,5 +235,6 @@ function get_sym_list(){return [["Subroutine","xsr",[["DGESV",173]]]];} /* ]]> *
 <a class="l" name="227" href="#227">227</a><span class="c">*     End of DGESV</span>
 <a class="l" name="228" href="#228">228</a><span class="c">*</span>
 <a class="l" name="229" href="#229">229</a>      <b>END</b>
-<a class="hl" name="230" href="#230">230</a></body>
+<a class="hl" name="230" href="#230">230</a>      <b>CALL</b> <span class="s">&apos;<a href="http://example.com">http://example.com</a>&apos;</span>
+<a class="l" name="231" href="#231">231</a></body>
 </html>
